--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,13 @@
-certifi==2021.5.30
-chardet==4.0.0
-charset-normalizer==2.0.3
-click==8.0.1
-CodeEditor==1.1.0
-Flask==2.0.1
-gitdb==4.0.7
-GitPython==3.1.18
-greenlet==1.1.1
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-numpy==1.21.2
-opencv-python==4.5.3.56
-Pillow==8.3.1
-PyQt5==5.15.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
+greenlet==1.1.2
+idna==3.3
+pkg_resources==0.0.0
+PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
-QScintilla==2.13.0
-qt-material==2.8.8
+PyQt5-stubs==5.15.2.0
+QScintilla==2.13.1
 requests==2.26.0
-smmap==4.0.0
-SQLAlchemy==1.4.22
-tornado==6.1
-urllib3==1.26.6
-Werkzeug==2.0.1
-you-get==0.4.1545
+SQLAlchemy==1.4.27
+urllib3==1.26.7
